--- a/curso_flutter/shop/pubspec.yaml
+++ b/curso_flutter/shop/pubspec.yaml
@@ -14,11 +14,14 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  # provider: 4.0.5   #Versão exata
+  # provider: ~4.0.5  #Patch mais recente
+  provider: ^4.0.5    #Minor mais recente
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
