--- a/curso_flutter/shop/pubspec.yaml
+++ b/curso_flutter/shop/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   # provider: 4.0.5   #Versão exata
   # provider: ~4.0.5  #Patch mais recente
   provider: ^4.0.5    #Minor mais recente
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
