--- a/curso_flutter/great_places/pubspec.yaml
+++ b/curso_flutter/great_places/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4+4
+  path_provider: ^2.0.6
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
