--- a/curso_flutter/great_places/pubspec.yaml
+++ b/curso_flutter/great_places/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^2.0.6
   path: ^1.8.0
   sqflite: ^2.0.1
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
