--- a/curso_flutter/great_places/android/app/src/main/AndroidManifest.xml
+++ b/curso_flutter/great_places/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
    <application
         android:label="great_places"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="YOUR KEY HERE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
