--- a/curso_flutter/great_places/pubspec.yaml
+++ b/curso_flutter/great_places/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path: ^1.8.0
   sqflite: ^2.0.1
   location: ^4.3.0
+  google_maps_flutter: ^2.1.1
 
 dev_dependencies:
   flutter_test:
