--- a/curso_flutter/chat/pubspec.yaml
+++ b/curso_flutter/chat/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4+4
   provider: ^6.0.2
+  cloud_firestore: ^3.1.6
+  firebase_auth: ^3.3.5
 
 dev_dependencies:
   flutter_test:
