--- a/curso_flutter/chat/pubspec.yaml
+++ b/curso_flutter/chat/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.0.2
   cloud_firestore: ^3.1.6
   firebase_auth: ^3.3.5
+  firebase_storage: ^10.2.7
 
 dev_dependencies:
   flutter_test:
