--- a/curso_flutter/campo_minado/pubspec.yaml
+++ b/curso_flutter/campo_minado/pubspec.yaml
@@ -58,7 +58,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/aberto_0.jpeg
+    - assets/images/aberto_1.jpeg
+    - assets/images/aberto_2.jpeg
+    - assets/images/aberto_3.jpeg
+    - assets/images/aberto_4.jpeg
+    - assets/images/aberto_5.jpeg
+    - assets/images/aberto_6.jpeg
+    - assets/images/aberto_7.jpeg
+    - assets/images/aberto_8.jpeg
+    - assets/images/bandeira.jpeg
+    - assets/images/bomba_0.jpeg
+    - assets/images/bomba_1.jpeg
+    - assets/images/fechado.jpeg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
